<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".ModeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">

            <LinearLayout
                android:background="@drawable/title_rect"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_mode"
                    android:textSize="25dp"
                    android:layout_marginBottom="5dp"
                    android:theme="@style/text0Theme" />
            </LinearLayout>

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/game_rule"
                android:theme="@style/text0Theme" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/single_mode"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:src="@drawable/single_mode" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/single_mode_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_green"
                android:text="@string/play"
                android:theme="@style/text0Theme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/two_player_mode"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:src="@drawable/two_player_mode" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/two_player_mode_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_gray"
                android:text="@string/play"
                android:theme="@style/text0Theme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/call_mode"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:src="@drawable/call_mode" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/call_mode_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_gray"
                android:text="@string/play"
                android:theme="@style/text0Theme" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_white"
            android:text="@string/play"
            android:theme="@style/text1Theme" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>