<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center|top"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_point_1"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:background="@drawable/point_bg"
                android:gravity="center">

                <TextView
                    android:id="@+id/game_points_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/points"
                    android:theme="@style/text0Theme" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_mistake_1"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:background="@drawable/mistake_bg"
                android:gravity="center">

                <TextView
                    android:id="@+id/game_mistakes_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/mistake"
                    android:theme="@style/text0Theme" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_point_2"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:background="@drawable/point_bg"
                android:gravity="center">

                <TextView
                    android:id="@+id/game_points_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/points"
                    android:theme="@style/text0Theme" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_mistake_2"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:background="@drawable/mistake_bg"
                android:gravity="center">

                <TextView
                    android:id="@+id/game_mistakes_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/mistake"
                    android:theme="@style/text0Theme" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"/>


    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_game_over"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/bg_main"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left">

                <ImageView
                    android:id="@+id/game_over_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="90dp"
                    android:background="@drawable/title_rect"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/game_over"
                        android:textSize="25dp"
                        android:theme="@style/text0Theme" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/point_bg"
                android:gravity="center">

                <TextView
                    android:id="@+id/points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/points"
                    android:theme="@style/text0Theme" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="120dp"
                android:background="@drawable/score_bg"
                android:gravity="center">

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:text="+25"
                    android:textSize="30dp"
                    android:theme="@style/text0Theme" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/mistake_bg"
                android:gravity="center">

                <TextView
                    android:id="@+id/mistakes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/mistake"
                    android:theme="@style/text0Theme" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play_again"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_white"
            android:text="@string/play_again"
            android:theme="@style/text1Theme"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>